; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_uep.c_uep_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_uep.c_uep_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uep_softc = type { i32, i32, i32, i32 }

@UEP_N_TRANSFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @uep_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uep_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.uep_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.uep_softc* @device_get_softc(i32 %4)
  store %struct.uep_softc* %5, %struct.uep_softc** %3, align 8
  %6 = load %struct.uep_softc*, %struct.uep_softc** %3, align 8
  %7 = getelementptr inbounds %struct.uep_softc, %struct.uep_softc* %6, i32 0, i32 2
  %8 = call i32 @usb_fifo_detach(i32* %7)
  %9 = load %struct.uep_softc*, %struct.uep_softc** %3, align 8
  %10 = getelementptr inbounds %struct.uep_softc, %struct.uep_softc* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @UEP_N_TRANSFER, align 4
  %13 = call i32 @usbd_transfer_unsetup(i32 %11, i32 %12)
  %14 = load %struct.uep_softc*, %struct.uep_softc** %3, align 8
  %15 = getelementptr inbounds %struct.uep_softc, %struct.uep_softc* %14, i32 0, i32 0
  %16 = call i32 @mtx_destroy(i32* %15)
  ret i32 0
}

declare dso_local %struct.uep_softc* @device_get_softc(i32) #1

declare dso_local i32 @usb_fifo_detach(i32*) #1

declare dso_local i32 @usbd_transfer_unsetup(i32, i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
